# django_lms_project

./: .env.example  .gitignore  Dockerfile  README.md  check_stripe.py  docker-compose.yaml  manage.py  pyproject.toml  temp.txt
.github/.github/workflows/: deploy.yml
.github/workflows/: deploy.yml
django_lms_project/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
materials/: admin.py  models.py  paginators.py  serializers.py  tasks.py  tests.py  urls.py  urls_subscriptions.py  validators.py  views.py  views_subscription.py
materials/migrations/: 0001_initial.py  0002_course_owner_lesson_owner_alter_course_preview_and_more.py  0003_alter_lesson_options_alter_lesson_owner_and_more.py  0004_subscription.py
services/: stripe_service.py
tests/: test_api.py  test_final.py  test_pagination.py  test_simple.py
users/: admin.py  filters.py  models.py  permissions.py  serializers.py  tasks.py  tests.py  urls.py  views.py
users/management/commands/: create_groups.py  create_payments.py
users/migrations/: 0001_initial.py  0002_payment.py  0003_payment_stripe_payment_status_and_more.py
